# pytest_example

./: .env.dist  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  IMPLEMENTATION_PLAN_PYTHON.md  IMPROVEMENTS_PLAN.md  Makefile  README.md  STACK.md  STACK_PYTHON.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml  tests.yml
scripts/: notify_telegram.py
src/sales_portal_tests/api/api/: customers_api.py  login_api.py  notifications_api.py  orders_api.py  (+1 more)
src/sales_portal_tests/config/: api_config.py  env.py
src/sales_portal_tests/data/: status_codes.py  tags.py
src/sales_portal_tests/mock/: __init__.py  mock.py
src/sales_portal_tests/utils/: date_utils.py  enum_utils.py  log_utils.py  mask_secrets.py
tests/: conftest.py
tests/api/: conftest.py  test_login.py
tests/api/customers/: test_create.py  test_delete.py  test_get_all.py  test_get_by_id.py  test_get_list.py
tests/api/orders/: test_assign_unassign_manager.py  test_comment.py  test_create.py  test_delete.py  test_delivery.py  test_get_by_id.py  test_notifications.py  test_orders_status.py  test_receive.py  test_update.py
tests/api/products/: test_create.py  test_delete.py  test_get_all.py  test_get_by_id.py  test_update.py
tests/ui/: conftest.py
tests/ui/integration/: test_create_order.py  test_orders_list.py  test_update_customer.py
tests/ui/orders/: test_assign_manager.py  test_comments.py  test_create_order.py  test_export_orders.py  test_navigation.py  test_order_delivery.py  test_order_details.py  test_order_modals.py  test_processing.py  test_receive_partial_products.py  test_receive_products.py  test_refresh_order.py  test_requested_products.py  test_update_customer.py
(+110 files in other folders)
